--- a/style.css
+++ b/style.css
@@ -3,13 +3,20 @@
  margin: 0;
  box-sizing: border-box;
  list-style-type: none;
+ font-family: 'Poppins', sans-serif;
+}
 
+#game-container{
+    
 }
 
 .cell{
     width: 75px;
     height: 75px;
     border: 2px solid;
+    font-size: 50px;
+    cursor: pointer;
+    text-align: center;
 }
 
 .cell-container{
